--- a/workspace/css/main.css
+++ b/workspace/css/main.css
@@ -117,6 +117,7 @@
       }
       .category-bar ul{
         margin: 0 auto;
+        width: auto;
         padding: 0;
       }
       .category-bar li{
