--- a/workspace/css/main.css
+++ b/workspace/css/main.css
@@ -20,6 +20,9 @@
       a:visited{
         color: black;
       }
+      a:hover{
+        color:#a3a3a3;
+      }
       /*///////////////////////////////////////////////////////////////////////////////////////////////////*/
       /*////////////////////////////////////////////// 링크 ///////////////////////////////////////////////*/
       .navbar {
